--- a/app/src/main/res/layout/detail_movie_recycler_view.xml
+++ b/app/src/main/res/layout/detail_movie_recycler_view.xml
@@ -84,9 +84,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
+                        android:gravity="center_vertical"
                         android:padding="3dp"
                         android:text="@string/edit"
-                        android:textAlignment="center"
                         android:textAllCaps="true"
                         android:textStyle="bold" />
                 </LinearLayout>
