--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintVertical_bias="0.02">
 
             <TextView
                 android:id="@+id/appTitle"
@@ -36,7 +36,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/cardView2"
+            android:id="@+id/addMovieBtn"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:cardCornerRadius="12dp"
@@ -56,7 +56,7 @@
                 tools:ignore="UseCompoundDrawables">
 
                 <ImageView
-                    android:id="@+id/addMovieBtn"
+                    android:id="@+id/addMovieImg"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/movie_add"
@@ -80,10 +80,10 @@
             android:layout_height="0dp"
             app:cardCornerRadius="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/cardView2"
+            app:layout_constraintEnd_toEndOf="@+id/addMovieBtn"
             app:layout_constraintHeight_percent=".8"
-            app:layout_constraintStart_toStartOf="@+id/cardView2"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2">
+            app:layout_constraintStart_toStartOf="@+id/addMovieBtn"
+            app:layout_constraintTop_toBottomOf="@+id/addMovieBtn">
 
             <LinearLayout
                 android:layout_width="match_parent"
