--- a/app/src/main/res/layout/fragment_insert.xml
+++ b/app/src/main/res/layout/fragment_insert.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="6dp">
 
@@ -84,7 +84,7 @@
                 app:layout_constraintVertical_bias="0.0" />
 
             <EditText
-                android:id="@+id/editTextNumber"
+                android:id="@+id/insertRatingField"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:ems="10"
@@ -104,10 +104,36 @@
                 android:gravity="center"
                 android:text="@string/rating"
                 android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
+                app:layout_constraintBottom_toBottomOf="@+id/insertRatingField"
                 app:layout_constraintEnd_toEndOf="@+id/genreInsertTxt"
                 app:layout_constraintStart_toStartOf="@+id/genreInsertTxt"
                 app:layout_constraintTop_toBottomOf="@+id/insertGenreField" />
+
+            <Button
+                android:id="@+id/confirmBtn"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/insert"
+                app:cornerRadius="12dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/insertRatingField"
+                app:layout_constraintVertical_bias=".1" />
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:indeterminate="true"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toTopOf="@+id/confirmBtn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
