--- a/app/src/main/res/layout/detail_movie_recycler_view.xml
+++ b/app/src/main/res/layout/detail_movie_recycler_view.xml
@@ -65,7 +65,7 @@
                 app:cardCornerRadius="12dp">
 
                 <LinearLayout
-                    android:id="@+id/editBtn"
+                    android:id="@+id/deleteLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="#FFBF69"
@@ -73,7 +73,7 @@
                     android:padding="3dp">
 
                     <ImageView
-                        android:id="@+id/imageView2"
+                        android:id="@+id/editImg"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -88,6 +88,44 @@
                         android:padding="3dp"
                         android:text="@string/edit"
                         android:textAllCaps="true"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/deleteBtn"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginBottom="3dp"
+                app:cardCornerRadius="12dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/paradise_pink"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight=".5"
+                        app:srcCompat="@drawable/ic_delete" />
+
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight=".5"
+                        android:gravity="center_vertical"
+                        android:text="delete"
+                        android:textAllCaps="true"
+                        android:textColor="@color/white"
                         android:textStyle="bold" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
