--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="tiffany_blue">#2EC4B6</color>
+    <color name="paradise_pink">#EE4266</color>
 </resources>
