--- a/app/src/main/res/layout/detail_movie_recycler_view.xml
+++ b/app/src/main/res/layout/detail_movie_recycler_view.xml
@@ -59,6 +59,7 @@
                 android:text="@string/popularity" />
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/editBtn"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="2dp"
