--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="tiffany_blue">#2EC4B6</color>
     <color name="paradise_pink">#EE4266</color>
+    <color name="ice_white">#F9F7FA</color>
+    <color name="dark_grey">#232323</color>
 </resources>
