--- a/app/src/main/res/navigation/movie_nav.xml
+++ b/app/src/main/res/navigation/movie_nav.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/movie_nav"
-    app:startDestination="@id/home2">
+    app:startDestination="@id/splashScreen">
 
     <fragment
         android:id="@+id/home2"
         android:name="com.anlian.ifilm.Home"
         android:label="fragment_home"
-        tools:layout="@layout/fragment_home" >
+        tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_home2_to_insert"
             app:destination="@id/insert"
@@ -24,6 +24,28 @@
             app:exitAnim="@anim/nav_default_exit_anim"
             app:popEnterAnim="@anim/nav_default_pop_enter_anim"
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+        <action
+            android:id="@+id/action_home2_to_registerPage"
+            app:destination="@id/registerPage"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
+        <argument
+            android:name="id"
+            app:argType="string" />
+        <argument
+            android:name="fullname"
+            app:argType="string" />
+        <argument
+            android:name="email"
+            app:argType="string" />
+        <argument
+            android:name="password"
+            app:argType="string" />
+        <argument
+            android:name="picturePath"
+            app:argType="string" />
     </fragment>
     <dialog
         android:id="@+id/insert"
@@ -48,4 +70,45 @@
             android:name="id"
             app:argType="string" />
     </dialog>
+    <fragment
+        android:id="@+id/loginPage"
+        android:name="com.anlian.ifilm.LoginPage"
+        android:label="fragment_login_page"
+        tools:layout="@layout/fragment_login_page" >
+        <action
+            android:id="@+id/action_loginPage_to_home2"
+            app:destination="@id/home2"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:launchSingleTop="true"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim"
+            app:popUpTo="@id/home2" />
+    </fragment>
+    <fragment
+        android:id="@+id/registerPage"
+        android:name="com.anlian.ifilm.RegisterPage"
+        android:label="fragment_register_page"
+        tools:layout="@layout/fragment_register_page" >
+        <action
+            android:id="@+id/action_registerPage_to_loginPage"
+            app:destination="@id/loginPage"
+            app:enterAnim="@android:anim/slide_in_left"
+            app:exitAnim="@android:anim/slide_out_right"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out"
+            app:popUpTo="@id/registerPage" />
+    </fragment>
+    <fragment
+        android:id="@+id/splashScreen"
+        android:name="com.anlian.ifilm.SplashScreen"
+        android:label="fragment_splash_screen"
+        tools:layout="@layout/fragment_splash_screen" >
+        <action
+            android:id="@+id/action_splashScreen_to_home2"
+            app:destination="@id/home2"
+            app:launchSingleTop="true"
+            app:popUpTo="@id/home2"
+            app:popUpToInclusive="true" />
+    </fragment>
 </navigation>
