--- a/app/src/main/res/navigation/movie_nav.xml
+++ b/app/src/main/res/navigation/movie_nav.xml
@@ -27,8 +27,8 @@
         <action
             android:id="@+id/action_home2_to_registerPage"
             app:destination="@id/registerPage"
-            app:enterAnim="@anim/nav_default_enter_anim"
-            app:exitAnim="@anim/nav_default_exit_anim"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out" />
         <argument
