--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -82,38 +82,49 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#2EC4B6"
-                android:orientation="vertical"
-                android:padding="5dp"
-                tools:ignore="UseCompoundDrawables">
+                android:orientation="horizontal"
+                android:baselineAligned="false">
 
-                <ImageView
-                    android:id="@+id/addMovieImg"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:contentDescription="@string/movie_add"
-                    android:src="@drawable/ic_add" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight=".5"
+                    android:background="#2EC4B6"
+                    android:orientation="vertical"
+                    android:padding="5dp"
+                    tools:ignore="UseCompoundDrawables">
 
-                <TextView
-                    android:id="@+id/addMovieText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="@string/movie_add"
-                    android:textAlignment="center"
-                    android:textColor="#FAFAFAFA"
-                    android:textStyle="bold" />
+                    <ImageView
+                        android:id="@+id/addMovieImg"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:contentDescription="@string/movie_add"
+                        android:src="@drawable/ic_add"
+                        tools:ignore="ImageContrastCheck" />
+
+                    <TextView
+                        android:id="@+id/addMovieText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="@string/movie_add"
+                        android:textAlignment="center"
+                        android:textColor="#FAFAFAFA"
+                        android:textStyle="bold"
+                        tools:ignore="TextContrastCheck" />
+                </LinearLayout>
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cardView6"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:cardCornerRadius="12dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/addMovieBtn"
-            app:layout_constraintHeight_percent=".8"
+            app:layout_constraintHeight_percent=".5"
             app:layout_constraintStart_toStartOf="@+id/addMovieBtn"
             app:layout_constraintTop_toBottomOf="@+id/addMovieBtn">
 
@@ -138,6 +149,40 @@
                     android:layout_height="match_parent"
                     android:layout_marginTop="5dp"
                     tools:listitem="@layout/detail_movie_recycler_view" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/addNotificationBtn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/cardView6"
+            app:layout_constraintEnd_toEndOf="@+id/addMovieBtn"
+            app:layout_constraintStart_toStartOf="@+id/addMovieBtn"
+            app:layout_constraintTop_toBottomOf="@+id/addMovieBtn">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/paradise_pink"
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <ImageView
+                    android:id="@+id/addNotificationImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="32dp"
+                    android:src="@drawable/ic_notification" />
+
+                <TextView
+                    android:id="@+id/addNotificationTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/add_notification"
+                    android:textColor="@color/dark_grey"
+                    android:textStyle="bold" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
